--- a/menu.css
+++ b/menu.css
@@ -1,9 +1,9 @@
 /***************************************************
-Add your Google Fonts
 Update ALL the named colours to create a monochromatic scheme
 Style the menus - one horizontally and one vertically
 Add the hover/active effects to your menu items
 ***************************************************/
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 *{
     padding: 0;
     margin: 0;
