Added a background color

--- a/menu.css
+++ b/menu.css
@@ -16,7 +16,7 @@ html{
     font-family: helvetica, arial, sans-serif;
 }
 html, body{
-    background-color: salmon;
+    background-color #6B8525;
 }
 h1{
     font-size: 6.854rem;
