--- a/menu.css
+++ b/menu.css
@@ -70,6 +70,9 @@ header{
 .menu-v{
     width: 20%;
     float:left;
+    padding: 0;
+    margin: 0;
+    background-color: #A9D23A;
 }
     .menu-v li{
         /* style the list items to remove the bullets 
