--- a/menu.css
+++ b/menu.css
@@ -50,7 +50,7 @@ p{
 header{
     border-bottom: 0.8rem solid #869948;
     background-color: #A9D23A;
-    color:#175236;
+    color:#6B8525;
 }
 .menu-h{
     width: 100%;
