--- a/menu.css
+++ b/menu.css
@@ -23,7 +23,7 @@ h1{
     /* ADD the Google serif font to this font stack */
     font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; 
     padding: 1rem 2rem;
-    color: #6B8525;
+    color: #175236;
 }
 h2{
     font-size: 4.23rem;
