--- a/menu.css
+++ b/menu.css
@@ -3,7 +3,7 @@ Update ALL the named colours to create a monochromatic scheme
 Style the menus - one horizontally and one vertically
 Add the hover/active effects to your menu items
 ***************************************************/
-<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+
 *{
     padding: 0;
     margin: 0;
@@ -13,7 +13,7 @@ html{
     font-size: 16px;
     line-height: 1.6;
     /* ADD the Google sans-serif font to this font stack */
-    font-family: helvetica, arial, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 html, body{
     background-color: #6B8525;
