--- a/menu.css
+++ b/menu.css
@@ -77,6 +77,7 @@ header{
         .menu-h a:visited{
             display: block;
             width: 100%;
+            padding: 0;
             margin: 0;
             text-decoration: none;
             /* style the anchors to fill the entire width of the li 
