--- a/menu.css
+++ b/menu.css
@@ -86,7 +86,7 @@ header{
         .menu-v a:active,
         .menu-h a:hover {
             color: #175236;
-            background-color: #BAD279;
+            #background-color: #BAD279;
             background-color: #A9D23A;
             display: block;
                 
@@ -102,7 +102,8 @@ header{
     .menu-v li{
         list-style-type: none;
         width: 100%;
-        display: 8px auto;
+        display: block;
+        margin: 8px auto;
         text-align: center;
         /* style the list items to remove the bullets 
         and line up vertically
