--- a/menu.css
+++ b/menu.css
@@ -37,6 +37,7 @@ nav li{
     font-size: 2.618rem;
     color: #6B8E25;
     background-color: #A9D23A;
+    border-right: 2px solid #175236;
 }
 p{
     font-size: 1.618rem;
