--- a/menu.css
+++ b/menu.css
@@ -87,7 +87,7 @@ header{
         .menu-v a:active,
         .menu-h a:hover {
             color: #175236;
-            #background-color: #BAD279;
+            background-color: #CAFF00; 
             background-color:  #A9D23A;
             display: block;
                 
